# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg
brain_games/: all_games_code.py  brain_calc_code.py  brain_even_code.py  cli.py  greeting.py
brain_games/games/: all_games_code.py  brain_calc_code.py  brain_even_code.py  brain_gcd_code.py  brain_prime_code.py  brain_progression_code.py  calc.py  cli.py  engine.py  even.py  gcd.py  prime.py  progression.py  utils.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
