[project]
name = "hexlet-code"
version = "0.1.0"
description = "Module 1 project"
readme = "README.md"
repository = "https://github.com/pavelgrebenkov/python-project-49"
authors = [
    { name = "Pavel Grebenkov", email = "pavellearnnow@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1"
]

[project.optional-dependencies]
dev = ["ruff>=0.3.0"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]
